# legged_gym-matser

./: .gitignore  CHANGELOG.md  MPC_TRAINING_FIXES.md  monitor_mpc_training.py  setup.py  setup_dependencies.sh  test_mpc.py  test_mpc_performance.py  train_headless.py  visualize_mpc_control.py
.github/: copilot-instructions.md
legged_gym/: CMakeLists.txt  sim2sim.cpp  sim2sim.py
legged_gym/MPC_Controller/: __init__.py  a1_robot_parameters.py  lightweight_mpc.py  mpc_hybrid_wrapper.py  mpc_legged_gym_adapter.py
legged_gym/MPC_Controller/convex_MPC/: mpc_osqp.cc
legged_gym/MPC_Controller/include/: convex_mpc_osqp.h  csc.h  osqp_configure.h  osqp_data.h
legged_gym/envs/: __init__.py
legged_gym/envs/a1/: a1_config.py  a1_mpc.py
legged_gym/envs/base/: legged_robot.py  legged_robot_config.py
legged_gym/scripts/: play.py  run_sim2sim.sh  test_mpc_rl.py  train_mpc_rl.py
legged_gym/utils/: helpers.py  task_registry.py
onnx/: legged.onnx
resources/: a1.xml
resources/robots/a1/urdf/: a1.urdf
resources/robots/a1/xml/: a1.xml
scripts/: agent_smoke_run.sh
